--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "outDir": "./lib",
     "strict": true,
-    "lib": ["es6"]
+    "lib": ["es6", "dom"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
