--- a/package.json
+++ b/package.json
@@ -2,40 +2,123 @@
   "name": "l-watermark",
   "version": "0.0.4",
   "description": "",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run lint",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
-  },
+  "keywords": [],
+  "main": "dist/l-watermark.umd.js",
+  "module": "dist/l-watermark.es5.js",
+  "typings": "dist/types/l-watermark.d.ts",
+  "files": [
+    "dist"
+  ],
+  "author": "liurx <liurx_web@163.com>",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CleverLiurx/l-watermark.git"
   },
-  "keywords": [],
-  "author": "Liurx",
-  "license": "Mozilla",
-  "bugs": {
-    "url": "https://github.com/CleverLiurx/l-watermark/issues"
+  "license": "MIT",
+  "engines": {
+    "node": ">=6.0.0"
   },
-  "homepage": "https://github.com/CleverLiurx/l-watermark#readme",
+  "scripts": {
+    "lint": "tslint -p tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "prebuild": "rimraf dist",
+    "build": "tsc && rollup -c rollup.config.ts && typedoc",
+    "start": "rollup -c rollup.config.ts -w",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watch",
+    "test:prod": "npm run lint && npm run test -- --no-cache",
+    "deploy-docs": "ts-node tools/gh-pages-publish",
+    "report-coverage": "cat ./coverage/lcov.info | coveralls",
+    "commit": "git-cz",
+    "semantic-release": "semantic-release",
+    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
+    "precommit": "lint-staged",
+    "travis-deploy-once": "travis-deploy-once"
+  },
+  "lint-staged": {
+    "{src,test}/**/*.ts": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "testEnvironment": "node",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 95,
+        "lines": 95,
+        "statements": 95
+      }
+    },
+    "collectCoverageFrom": [
+      "src/*.{js,ts}"
+    ]
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.41",
+    "colors": "^1.4.0",
+    "commitizen": "^4.2.4",
+    "coveralls": "^3.1.1",
+    "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.1",
+    "jest-config": "^28.1.1",
+    "lint-staged": "^13.0.1",
+    "lodash.camelcase": "^4.3.0",
     "prettier": "^2.6.2",
+    "prompt": "^1.3.0",
+    "replace-in-file": "^6.3.5",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.75.6",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "semantic-release": "^19.0.3",
+    "shelljs": "^0.8.5",
+    "travis-deploy-once": "^5.0.9",
     "ts-jest": "^28.0.4",
-    "tslint": "^6.1.3",
+    "ts-node": "^10.8.1",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^8.0.1",
+    "typedoc": "^0.22.17",
     "typescript": "^4.7.3"
   },
-  "files": [
-    "lib/**/*",
-    "README.md"
-  ]
+  "bugs": {
+    "url": "https://github.com/CleverLiurx/l-watermark/issues"
+  }
 }
