--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,26 @@
 {
   "compilerOptions": {
+    "moduleResolution": "node",
     "target": "es5",
-    "module": "commonjs",
-    "declaration": true,
-    "outDir": "./lib",
+    "module":"es2015",
+    "lib": ["es2015", "es2016", "es2017", "dom"],
     "strict": true,
-    "lib": ["es6", "dom"]
+    "sourceMap": true,
+    "declaration": true,
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "declarationDir": "dist/types",
+    "outDir": "dist/lib",
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+  "typedocOptions": {
+    "entryPoints": ["src/l-watermark.ts"],
+    "out": "docs"
+  },
+  "include": [
+    "src"
+  ]
 }
