--- a/package.json
+++ b/package.json
@@ -27,18 +27,9 @@
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
     "deploy-docs": "ts-node tools/gh-pages-publish",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls",
-    "commit": "git-cz",
-    "semantic-release": "semantic-release",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged",
-    "travis-deploy-once": "travis-deploy-once"
-  },
-  "lint-staged": {
-    "{src,test}/**/*.ts": [
-      "prettier --write",
-      "git add"
-    ]
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "config": {
     "commitizen": {
@@ -94,7 +85,6 @@
     "husky": "^8.0.1",
     "jest": "^28.1.1",
     "jest-config": "^28.1.1",
-    "lint-staged": "^13.0.1",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^2.6.2",
     "prompt": "^1.3.0",
@@ -107,9 +97,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
-    "semantic-release": "^19.0.3",
     "shelljs": "^0.8.5",
-    "travis-deploy-once": "^5.0.9",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1",
     "tslint": "^5.20.1",
