--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "node": ">=6.0.0"
   },
   "scripts": {
-    "lint": "tslint -p tsconfig.json -t codeFrame 'src/**/*.ts'",
+    "lint": "tslint -p tsconfig.json",
     "prebuild": "rimraf dist",
     "build": "tsc && rollup -c rollup.config.ts && typedoc",
     "start": "rollup -c rollup.config.ts -w",
