--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "l-watermark",
   "version": "0.1.0",
-  "description": "",
-  "keywords": [],
+  "description": "A web watermark SDK, support: custom watermark content and style, watermark encryption and decryption, watermark anomaly monitoring, etc. ",
+  "keywords": [
+    "watermark",
+    "js",
+    "ts"
+  ],
   "main": "dist/l-watermark.umd.js",
   "module": "dist/l-watermark.es5.js",
   "typings": "dist/types/l-watermark.d.ts",
@@ -21,7 +25,7 @@
   "scripts": {
     "lint": "tslint -p tsconfig.json",
     "prebuild": "rimraf dist",
-    "build": "tsc && rollup -c rollup.config.ts && typedoc",
+    "build": "tsc && rollup -c rollup.config.ts",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
@@ -86,7 +90,6 @@
     "husky": "^8.0.1",
     "jest": "^28.1.1",
     "jest-config": "^28.1.1",
-    "lodash.camelcase": "^4.3.0",
     "prettier": "^2.6.2",
     "prompt": "^1.3.0",
     "replace-in-file": "^6.3.5",
@@ -104,7 +107,6 @@
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
-    "typedoc": "^0.22.17",
     "typescript": "^4.7.3"
   },
   "bugs": {
