--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "l-watermark",
   "version": "1.0.2",
-  "description": "A web watermark SDK, support: custom watermark content and style, watermark encryption and decryption, watermark anomaly monitoring, etc. ",
+  "description": "l-watermark：一个支持TS的前端水印SDK，可以自由的在图片或前端页面中添加各种形式和内容的水印（或暗水印）！",
   "keywords": [
     "watermark",
-    "js",
+    "水印",
     "ts"
   ],
   "main": "dist/l-watermark.umd.js",
