--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,20 +5,16 @@
     "module":"es2015",
     "lib": ["es2015", "es2016", "es2017", "dom"],
     "strict": true,
-    "sourceMap": true,
+    // "sourceMap": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
-    "outDir": "dist/lib",
+    "outDir": "lib",
     "typeRoots": [
       "node_modules/@types"
     ]
-  },
-  "typedocOptions": {
-    "entryPoints": ["src/l-watermark.ts"],
-    "out": "docs"
   },
   "include": [
     "src"
