--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "keywords": [
     "watermark",
     "水印",
-    "ts",
     "vue水印",
     "react水印",
-    "ts水印"
+    "ts水印",
+    "前端水印"
   ],
-  "main": "dist/l-watermark.umd.js",
-  "module": "dist/l-watermark.es5.js",
-  "typings": "dist/types/l-watermark.d.ts",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.es5.js",
+  "typings": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
